# safe_panic_modules

./: .env.example  .gitignore  .gitmodules  README.md  brownie-config.yaml  network-config.yaml  pyproject.toml  requirements.txt
.github/workflows/: main.yaml
contracts/: BaseModule.sol  ModuleFactory.sol
contracts/modules/: AaveWithdrawModule.sol  ApprovalModule.sol  RevokeModule.sol  UniswapWithdrawModule.sol
contracts/testContracts/: TokenErc20.sol
interfaces/: ISafe.sol  ISafeProxy.sol  ISafeProxyFactory.sol  IWETH9.sol
interfaces/aave/: IAToken.sol  IAaveV3Pool.sol
interfaces/gnosis/: IGnosisSafe.sol
interfaces/push/: INotification.sol
interfaces/uniswap_v2/: IUniswapV2Pair.sol  IUniswapV2Router02.sol
scripts/: deploy_aave_module_singleton.py  deploy_module_factory.py  deploy_revoke_module_singleton.py  deploy_uniswap_module_singleton.py  relay_revoke_call.py
scripts/emergency_tools/: revoke_token.py  withdraw_collateral_aave.py
tests/: conftest.py  test_create_proxy_from_factory.py  test_deploy_safe.py
tests/aave_withdraw_module/: conftest.py  test_withdraw_action.py
tests/approve_module/: conftest.py
tests/factory/: conftest.py  test_module_creation_via_factory.py
tests/revoke_module/: conftest.py  test_approve_action.py  test_revoke_action.py
tests/uniswap_withdraw_module/: conftest.py  test_withdraw.py
